samples/_failures_safe/1761072136_e53b43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fec3653.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_7fec3653.c:174:9: error: expected declaration or statement at end of input
  174 |         case TOKEN_STRING: return "STRING";
      |         ^~~~
./samples/SAFE/__tmp_7fec3653.c:174:9: error: expected declaration or statement at end of input
